@@ -7,7 +7,9 @@
 ADDED:
 
   * Added additional arguments to the callback function for ajaxrequest in the
-    default handler.
+    default handler
+
+  * The "pythoncode" question type now listens to the "csq_show_check" flag
 
 CHANGED:
 
